--- a/courses/NVIDIA/Building-RAG-Agents/02-Environment-LLMs/00_jupyterlab.ipynb
+++ b/courses/NVIDIA/Building-RAG-Agents/02-Environment-LLMs/00_jupyterlab.ipynb
@@ -39,11 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "FapSM5sUbFDV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is just a simple print statement\n"
+     ]
+    }
+   ],
    "source": [
     "# Highlight this cell and click [Shift+Enter] to execute\n",
     "print('This is just a simple print statement')"
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -87,7 +95,37 @@
     "id": "wunSuseud2qf",
     "outputId": "92c63cd6-e342-499f-d566-18706d3fd35d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:  Ripunjoy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Ripunjoy\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please tell me a secret:  ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your secret is: **********\n"
+     ]
+    }
+   ],
    "source": [
     "from getpass import getpass\n",
     "from pydantic import SecretStr\n",
@@ -112,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -131,7 +169,28 @@
     "id": "JmikhG6ifIfN",
     "outputId": "201861d2-0dd8-40c2-9807-c20eb551ebfa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld\n",
+      "5 8\n",
+      "11\n",
+      "invalid syntax (<string>, line 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"HELLO RIPUNJOY!! It's so nice to meet you!\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "################################################################################\n",
     "## Implicit string concatenation. Interpretted as `print( \"Hello\" \"World\" )`\n",
@@ -204,6 +263,13 @@
    "source": [
     "<center><a href=\"https://www.nvidia.com/dli\"> <img src=\"https://dli-lms.s3.amazonaws.com/assets/general/DLI_Header_White.png\" alt=\"Header\" style=\"width: 400px;\"/> </a></center>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -225,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
