--- a/courses/NVIDIA/Building-RAG-Agents/02-Environment-LLMs/99_table_of_contents.ipynb
+++ b/courses/NVIDIA/Building-RAG-Agents/02-Environment-LLMs/99_table_of_contents.ipynb
@@ -45,9 +45,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "var url = 'http://'+window.location.host+':8999';\n",
+       "element.innerHTML = '<a style=\"color:#76b900;\" target=\"_blank\" href='+url+'><h2>< Link To Gradio Chatbot ></h2></a>';\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
     "var url = 'http://'+window.location.host+':8999';\n",
@@ -65,9 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "var url = 'http://'+window.location.host+':8090';\n",
+       "element.innerHTML = '<a style=\"color:#76b900;\" target=\"_blank\" href='+url+'><h2>< Link To Gradio Frontend ></h2></a>';\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
     "var url = 'http://'+window.location.host+':8090';\n",
@@ -85,9 +113,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frontend\n",
+      "chatbot_rproxy\n",
+      "chatbot\n",
+      "c-fx-15-v1-task1_nginx_1\n",
+      "frontend_rproxy\n",
+      "c-fx-15-v1-task1_assessment_1\n",
+      "llm_client\n",
+      "docker_router\n",
+      "jupyter-notebook-server\n",
+      "dli-logserv\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "\n",
@@ -98,9 +143,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-02-02 10:26:47 +0000] [7] [INFO] Starting gunicorn 22.0.0\n",
+      "[2025-02-02 10:26:47 +0000] [7] [INFO] Listening at: http://0.0.0.0:8999 (7)\n",
+      "[2025-02-02 10:26:47 +0000] [7] [INFO] Using worker: uvicorn.workers.UvicornWorker\n",
+      "[2025-02-02 10:26:47 +0000] [8] [INFO] Booting worker with pid: 8\n",
+      "[2025-02-02 10:26:47 +0000] [9] [INFO] Booting worker with pid: 9\n",
+      "[2025-02-02 10:26:47 +0000] [10] [INFO] Booting worker with pid: 10\n",
+      "Starting FastAPI app\n",
+      "Starting FastAPI app\n",
+      "Starting FastAPI app\n",
+      "[2025-02-02 10:27:09 +0000] [9] [INFO] Started server process [9]\n",
+      "[2025-02-02 10:27:09 +0000] [9] [INFO] Waiting for application startup.\n",
+      "[2025-02-02 10:27:09 +0000] [9] [INFO] Application startup complete.\n",
+      "[2025-02-02 10:27:10 +0000] [10] [INFO] Started server process [10]\n",
+      "[2025-02-02 10:27:10 +0000] [10] [INFO] Waiting for application startup.\n",
+      "[2025-02-02 10:27:10 +0000] [10] [INFO] Application startup complete.\n",
+      "[2025-02-02 10:27:10 +0000] [8] [INFO] Started server process [8]\n",
+      "[2025-02-02 10:27:10 +0000] [8] [INFO] Waiting for application startup.\n",
+      "[2025-02-02 10:27:10 +0000] [8] [INFO] Application startup complete.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "service_name = \"chatbot\"  ## Which microservice to look at\n",
     "# from_idx = -4000           ## - to see truncated output\n",
@@ -114,6 +185,13 @@
    "source": [
     "<center><a href=\"https://www.nvidia.com/dli\"> <img src=\"https://dli-lms.s3.amazonaws.com/assets/general/DLI_Header_White.png\" alt=\"Header\" style=\"width: 400px;\"/> </a></center>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
